# ec-customer-support-e2e-agentcore

./: .gitignore  CLAUDE.md  README.md
docs/: ARCHITECTURE.md  AWS_SETUP_GUIDE.md  TROUBLESHOOTING.md  agentcore-invocation-patterns.md  langfuse-integration-guide.md  tool-result-mocking.md
infra/cloudformation/: cognito.yaml  infrastructure.yaml
infra/scripts/: cleanup.sh  deploy.sh
notebooks/: Dockerfile  lab-01-create-ecommerce-agent.ipynb  lab-02-agentcore-memory.ipynb  lab-03-agentcore-gateway.ipynb  lab-04-agentcore-runtime.ipynb  lab-05-frontend.ipynb  lab-07-cleanup.ipynb  lab-09-cleanup.ipynb  notebook_utils.py  requirements.txt
notebooks/lab-04-agentcore-runtime/: lab-04-agentcore-runtime.ipynb  lab4_runtime.py
notebooks/lab-05-agentcore-observability/: Dockerfile  lab-05-agentcore-observability.ipynb  lab5_runtime_streaming.py  requirements.txt
notebooks/lab-06-agentcore-observability-langfuse/: .env.example  Dockerfile  ecommerce_tools.py  lab-06-agentcore-observability-langfuse.ipynb  requirements.txt  runtime_langfuse_streaming.py
setup/: .env.example  COMPATIBILITY.md  README.md  deploy_infra.sh  list_ssm_parameters.sh  pyproject.toml  run_streamlit.sh  setup_aws.sh  setup_env.sh
setup/cloudformation/: infrastructure.yaml
setup/lambda/: api_spec.json  return_eligibility_check.py
src/: __init__.py  agent.py
src/helpers/: __init__.py  cleanup_iam.py  ecommerce_memory.py  lab1_strands_agent.py  lab4_runtime.py  utils.py
src/tools/: __init__.py  exchange_tools.py  return_tools.py  (+1 more)
under_development/: lab-06-frontend.ipynb
(+3 files in other folders)
